examples/errors/parsing/listlength-sort-comma-params.rcn
sort Map(k v) = { Empty : () | Bind : (k * v * Map(k, v)) }
main : () [impure] = ()
